Updated Customer  UI

--- a/Customer UI/customer.html
+++ b/Customer UI/customer.html
@@ -71,13 +71,13 @@
               <img class="img-fluid d-block rounded-circle mx-auto" src="https://pingendo.github.io/templates/sections/assets/test_meow.jpg">
               <br>
               <br> </div>
-            <div class="col-md-6 text-left">
-              <p>
-                <b>Name: </b>
+            <div class="col-md-6">
+              <p contenteditable="true">
+                <b>Name: Troye Galatcha</b>
                 <br>
-                <b>Email Address: </b>
+                <b>Email Address: troyeit@gmail.com</b>
                 <br>
-                <b>Contact Number: </b>
+                <b> Contact Number: +63123123123</b>
                 <br> </p>
             </div>
           </div>
@@ -97,6 +97,7 @@
       </div>
     </div>
   </div>
+
 </body>
 
 </html>
