--- a/ServiceProvider UI/room.html
+++ b/ServiceProvider UI/room.html
@@ -1,47 +1,45 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Homeseek</title>
-  <!-- Bootstrap CSS CDN -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <!-- Our Custom CSS -->
-  <link rel="stylesheet" href="css/style.css"> </head>
-
-<body>
-  <div class="wrapper">
-    <!-- Sidebar Holder -->
-    <nav id="sidebar">
-      <div class="sidebar-header text-uppercase">
-        <h3>Homeseek</h3>
-        <strong>HS</strong>
-      </div>
-      <ul class="list-unstyled components">
-        <li>
-          <a href="main.html">
-            <i class="glyphicon glyphicon-home"></i> Home </a>
-        </li>
-        <li>
-          <a href="services.html">
-            <i class="glyphicon glyphicon-plus"></i> Post Services </a>
-        </li>
-        <li class="active">
-          <a href=reservations.html>
-            <i class="glyphicon glyphicon-book"></i> Reservations </a>
-        </li>
-        <li>
-          <a href="transactions.html">
-            <i class="glyphicon glyphicon-qrcode"></i> Transactions </a>
-        </li>
-        <li>
-          <a href="index.html">
-            <i class="glyphicon glyphicon-log-out"></i> Logout </a>
-        </li>
-      </ul>
-    </nav>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Homeseek</title>
+        <!-- Bootstrap CSS CDN -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <!-- Our Custom CSS -->
+        <link rel="stylesheet" href="css/style.css"> </head>
+    <body>
+        <div class="wrapper">
+        <!-- Sidebar Holder -->
+            <nav id="sidebar">
+                <div class="sidebar-header text-uppercase">
+                    <h3>Homeseek</h3>
+                    <strong>HS</strong>
+                </div>
+                <ul class="list-unstyled components">
+                    <li class="active">
+                        <a href="main.html">
+                        <i class="glyphicon glyphicon-home"></i> Home </a>
+                    </li>
+                    <li>
+                        <a href="services.html">
+                        <i class="glyphicon glyphicon-plus"></i> Post Services </a>
+                    </li>
+                    <li>
+                        <a href=reservations.html>
+                        <i class="glyphicon glyphicon-book"></i> Reservations </a>
+                    </li>
+                    <li>
+                        <a href="transactions.html">
+                        <i class="glyphicon glyphicon-qrcode"></i> Transactions </a>
+                    </li>
+                    <li>
+                        <a href="index.html">
+                        <i class="glyphicon glyphicon-log-out"></i> Logout </a>
+                    </li>
+                </ul>
+            </nav>
     <!-- Page Content Holder -->
     <div id="content">
       <nav class="navbar navbar-default">
@@ -103,6 +101,7 @@
                 walk away.
                 <br>
                 <br>SM City Baguio shopping mall and the picturesque Burnham Park are less than two kilometres from the lodge.</p>
+              <a class="btn btn-lg btn-primary" href="#">Reserve</a>
             </div>
           </div>
         </div>
