--- a/ServiceProvider UI/services.html
+++ b/ServiceProvider UI/services.html
@@ -1,155 +1,140 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Homeseek</title>
-  <!-- Bootstrap CSS CDN -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <!-- Our Custom CSS -->
-  <link rel="stylesheet" href="css/style.css"> </head>
-
-<body>
-  <div class="wrapper">
-    <!-- Sidebar Holder -->
-    <nav id="sidebar">
-      <div class="sidebar-header text-uppercase">
-        <h3>Homeseek</h3>
-        <strong>HS</strong>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Homeseek</title>
+        <!-- Bootstrap CSS CDN -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <!-- Our Custom CSS -->
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+        <div class="wrapper">
+        <!-- Sidebar Holder -->
+            <nav id="sidebar">
+                <div class="sidebar-header text-uppercase">
+                    <h3>Homeseek</h3>
+                    <strong>HS</strong>
+                </div>
+                <ul class="list-unstyled components">
+                    <li>
+                        <a href="main.html">
+                        <i class="glyphicon glyphicon-home"></i> Home </a>
+                    </li>
+                    <li class="active">
+                        <a href="services.html">
+                        <i class="glyphicon glyphicon-plus"></i> Post Services </a>
+                    </li>
+                    <li>
+                        <a href=reservations.html>
+                        <i class="glyphicon glyphicon-book"></i> Reservations </a>
+                    </li>
+                    <li>
+                        <a href="transactions.html">
+                        <i class="glyphicon glyphicon-qrcode"></i> Transactions </a>
+                    </li>
+                    <li>
+                        <a href="index.html">
+                        <i class="glyphicon glyphicon-log-out"></i> Logout </a>
+                    </li>
+                </ul>
+            </nav>
+            <!-- Page Content Holder -->
+            <div id="content">
+                <nav class="navbar navbar-default">
+                    <div class="container-fluid">
+                        <div class="navbar-header">
+                            <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
+                                <i class="glyphicon glyphicon-align-left"></i>
+                                <span>Toggle Sidebar</span>
+                            </button>
+                        </div>
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <ul class="nav navbar-nav navbar-right">
+                                <li>
+                                    <a href="#">
+                                    <i class="glyphicon glyphicon-search"></i> Search </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 col-xl-12 col-md-12">
+                        <a href="#">
+                        <i class="glyphicon glyphicon-circle-arrow-left"></i> Back </a>
+                    </div>
+                </div>
+            </div>
+            <div class="py-5 bg-light mr-auto w-25">
+                <div class="container">
+                    <h1 class="text-center">Post a Service</h1>
+                    <div class="row">
+                        <form>
+                            <div class="form-group">
+                                <label for="inputHouseName">Name</label>
+                                <input type="name" class="form-control" id="inputHouseName" placeholder="Enter house name">
+                            </div>
+                            <div class="form-group">
+                                <label for="inputHouseStyle">Style</label>
+                                <input type="name" class="form-control" id="inputHouseStyle"placeholder="Enter house style">
+                            </div>
+                            <div class="form-group">
+                                <label for="setHouseCapacity">Capacity</label>
+                                <input type="name" class="form-control" id="setHouseCapacity" placeholder="Set house capacity">
+                            </div>
+                            <div class="form-group">
+                                <label for="inputHouseDescription">Description</label>
+                                <textarea class="form-control" rows="5" id="inputHouseDescription" placeholder="Enter a description"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <label for="inputLocation">Location</label>
+                                <input type="name" class="form-control" id="inputHouseLocation"placeholder="House number, street, barangay, city">
+                            </div> 
+                            <div class="form-group">
+                                <label for="setRentalType">Rental Type</label>
+                                <select class="form-control" id="setRentalType">
+                                  <option>Per house</option>
+                                  <option>Per type</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="inputPrice">Price</label>
+                                <span class="input-group-addon">PHP</span>
+                                <input type="name" class="form-control" id="inputName"placeholder="0.00">
+                            </div>
+                            <div class="form-group">
+                                <div class="custom-file">
+                                    <label class="custom-file-label" for="customFile">Upload service images</label>
+                                    <input type="file" class="custom-file-input" id="customFile">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                    <label class="form-check-label" for="exampleCheck1">I agree</label>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <!-- jQuery CDN -->
+            <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+            <!-- Bootstrap Js CDN -->
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+            <script type="text/javascript">
+                $(document).ready(function () {
+                    $('#sidebarCollapse').on('click', function () {
+                        $('#sidebar').toggleClass('active');
+                    });
+                });
+            </script>
+        </div>
       </div>
-      <ul class="list-unstyled components">
-        <li>
-          <a href="main.html">
-            <i class="glyphicon glyphicon-home"></i> Home </a>
-        </li>
-        <li class="active">
-          <a href="services.html">
-            <i class="glyphicon glyphicon-plus"></i> Post Services </a>
-        </li>
-        <li>
-          <a href=reservations.html>
-            <i class="glyphicon glyphicon-book"></i> Reservations </a>
-        </li>
-        <li>
-          <a href="transactions.html">
-            <i class="glyphicon glyphicon-qrcode"></i> Transactions </a>
-        </li>
-        <li>
-          <a href="index.html">
-            <i class="glyphicon glyphicon-log-out"></i> Logout </a>
-        </li>
-      </ul>
-    </nav>
-    <!-- Page Content Holder -->
-    <div id="content">
-      <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
-              <i class="glyphicon glyphicon-align-left"></i>
-              <span>Toggle Sidebar</span>
-            </button>
-          </div>
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-              <li>
-                <a href="#">
-                  <i class="glyphicon glyphicon-search"></i> Search </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 col-xl-12 col-md-12">
-            <a href="#">
-              <i class="glyphicon glyphicon-circle-arrow-left"></i> Back </a>
-          </div>
-        </div>
-      </div>
-      <div class="py-5 bg-light mr-auto w-25">
-        <div class="container">
-            <h1 class="text-center">Post a Service</h1>
-            <div class="row">
-            <form>
-              <div class="form-group">
-                  <label for="inputName">Name</label>
-              <div class="form-row">
-                <div class="col-sm-6" id="inputName">
-                  <input type="text" class="form-control" placeholder="Last Name">
-                </div>
-                <div class="col-sm-6">
-                  <input type="text" class="form-control" placeholder="First Name">
-                </div>
-              </div>   
-              </div>
-              <div class="form-group">
-                  <label for="inputLocation">Location</label>
-              <div class="form-row">
-                <div class="col-sm-2" id="inputLocation">
-                  <input type="text" class="form-control" placeholder="House Number">
-                </div>
-                <div class="col-sm-5">
-                  <input type="text" class="form-control" placeholder="Barangay">
-                </div>
-                <div class="col-sm-5">
-                  <input type="text" class="form-control" placeholder="City">
-                </div>
-              </div>
-              </div>
-              <div class="form-group">
-                  <div class="form-row">
-                <label for="distanceFromCenter">Distance from Baguio City Center</label>
-                  </div> 
-                  <div class="col-sm-7">
-                <select class="form-control" id="distanceFromCenter">
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5</option>
-                </select>
-              </div>
-            </div>
-              <div class="form-group">
-                <div class="form-row">
-                <label class="control-label">
-                   Attach image/s for the service
-                </label>
-                  </div>
-                <div class="col-sm-10">
-                    <span class="btn btn-default btn-file">
-                        <input id="input-2" name="input2[]" type="file" class="file" multiple data-show-upload="true" data-show-caption="true">
-                    </span>
-                </div>
-            </div>
-              <div class="form-group">
-              <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">I agree with the terms and conditions</label>
-              </div>
-              </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-            </div>
-        </div>
-    </div>
-    <!-- jQuery CDN -->
-    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-    <!-- Bootstrap Js CDN -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-        $('#sidebarCollapse').on('click', function () {
-        $('#sidebar').toggleClass('active');
-           });
-       });
-    </script>
-    </div>
-  </div>
-</body>
-
+    </body>
 </html>
